server/deploy/Networking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: wpsec
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
  type: ClusterIP
